--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
-name = "package_name"
+name = "data-encryptor"
 version = "0.0.1"
 authors = [
     {name="Shun Huang", email="shun@formosa1544.com"}
 ]
-description = "Package description"
+description = "A convenient tool to encrypt data."
 readme = {file = "README.rst", content-type = "text/x-rst"}
 requires-python = ">=3.11"
 license = {text = "MIT License"}
@@ -14,7 +14,7 @@ dependencies = []
 exclude = ["tests"]
 
 [project.urls]
-repository = "https://github.com/burpeesDaily/python-template"
+repository = "https://github.com/burpeesDaily/data-encryptor"
 
 [project.scripts]
-project-entry = "package.bin.entry:main"
+project-entry = "encryptor.bin.entry:main"
